# audio-transcriber

./: README.md  main.py  pyproject.toml
audio_transcriber/application/policies/: __init__.py  fallback_policy.py
audio_transcriber/application/use_cases/: execute_transcription_plan.py
audio_transcriber/domain/: __init__.py
audio_transcriber/domain/interfaces/: __init__.py  transcriber.py
audio_transcriber/domain/models/: transcription_plan.py
audio_transcriber/infrastructure/transcribers/: openai_adapter.py  registry.py
docs/articles/: como-criei-meu-proprio-sistema-de-transcricao-de-audio.md
examples/: README.md  advanced_example.py  basic_example.py  simple_usage.py
src/transcription/: __init__.py
src/transcription/application/: __init__.py
src/transcription/domain/models/: __init__.py  audio_file.py  transcription_job.py
src/transcription/infrastructure/: __init__.py
src/transcription/infrastructure/transcribers/: __init__.py  gemini_adapter.py
tests/: __init__.py  test_audio_file.py  test_fallback_policies.py  test_registry.py
